# OpenQDir

./: .oxlintrc.json  index.html  package-lock.json  package.json  structure.txt  tsconfig.app.json  vite.config.ts
docs/: AI_RULES.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PROMPTS.md  ROADMAP.md  TASKS.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ContextMenu/: ContextMenu.tsx  ContextMenuItem.tsx  ContextMenuSeparator.tsx  index.ts
src/components/ErrorBoundary/: ErrorBoundary.tsx  Fallback.tsx
src/components/LoadingOverlay/: LoadingOverlay.tsx
src/components/Toast/: Toast.tsx  ToastContainer.tsx  ToastContext.ts  ToastProvider.tsx  index.ts  useToast.ts
src/components/ui/: button.tsx  separator.tsx  tooltip.tsx
src/features/clipboard/: index.ts  store.ts
src/features/explorer/: index.ts  store.ts
src/features/layout/: index.ts  store.ts
src/hooks/: useClipboard.ts  useFileOperations.ts  useFileTransfer.ts  useKeyboardShortcuts.ts
src/lib/: index.ts  pathUtils.ts
src/services/: commandRegistry.ts  driveManager.ts  fileOperationsService.ts  fileSystemContext.ts  fileSystemProvider.tsx  fileSystemService.ts  fileTransferService.ts  globalShortcutManager.ts  index.ts  notificationService.ts  searchService.ts  settingsService.ts  tauriFileOperationsService.ts  tauriFileSystemService.ts  tauriFileTransferService.ts  useFileSystem.ts
src/types/: filesystem.ts  index.ts  navigation.ts
(+50 files in other folders)
