[package]
name = "openqdir"
version = "0.1.0"
description = "OpenQDir - A multi-pane file explorer"
authors = ["OpenQDir"]
edition = "2021"

[lib]
name = "openqdir_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
